samples/_failures_safe/1761785679_78191c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0d9f49a5.c: In function ‘main’:
./samples/SAFE/__tmp_0d9f49a5.c:151:34: error: missing terminating " character
  151 |             int cols2 = read_int("Enter columns for second matrix
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_0d9f49a5.c:151:13: error: expected expression at end of input
  151 |             int cols2 = read_int("Enter columns for second matrix
      |             ^~~
./samples/SAFE/__tmp_0d9f49a5.c:151:25: error: too few arguments to function ‘read_int’
  151 |             int cols2 = read_int("Enter columns for second matrix
      |                         ^~~~~~~~
./samples/SAFE/__tmp_0d9f49a5.c:16:5: note: declared here
   16 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_0d9f49a5.c:151:13: error: expected declaration or statement at end of input
  151 |             int cols2 = read_int("Enter columns for second matrix
      |             ^~~
./samples/SAFE/__tmp_0d9f49a5.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0d9f49a5.c:151:13: error: expected declaration or statement at end of input
